# drpc

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  checkstyle-suppressions.xml  checkstyle.xml  pom.xml
.github/workflows/: ci.yml  main.yml
all/: pom.xml
benchmark/: pom.xml
benchmark/script/: benchmark.sh  wrk.lua
client/: pom.xml
common/: pom.xml
common/src/main/java/org/dousi/codec/: Codec.java  dousi_pb.proto  drpc_pb.proto
common/src/main/java/org/dousi/common/: DousiAddress.java  DousiServiceInstance.java  DrpcAddress.java  Void.java
common/src/main/java/org/dousi/config/: ClientConfig.java  ServerConfig.java
common/src/main/java/org/dousi/constants/: GlobalConstants.java
common/src/main/java/org/dousi/exception/: CodecException.java  DousiCodecException.java  DousiConnectionRefusedException.java  DousiException.java  DousiIllegalAddressException.java  DousiIllegalUrlException.java  DousiRuntimeException.java  DousiTransportException.java  DrpcException.java  DrpcIllegalAddressException.java  DrpcRuntimeException.java  TransportException.java
common/src/main/java/org/dousi/registry/: DistKvNamingService.java  DistKvNamingServiceFactory.java  DousiConstants.java  DousiURL.java  NamingOptions.java  NamingService.java  NamingServiceFactory.java  NamingServiceFactoryManager.java  NotifyListener.java  PublishInfo.java  SubscribeInfo.java
common/src/main/java/org/dousi/utils/: CheckNotNullUtill.java  CustomThreadFactory.java  NetUtils.java  ReflectUtils.java  RequestIdGenerator.java  StringUtils.java
common/src/main/java/org/drpc/codec/: Codec.java
common/src/main/java/org/drpc/common/: DrpcAddress.java  Void.java
common/src/main/java/org/drpc/config/: ClientConfig.java  ServerConfig.java
common/src/main/java/org/drpc/constants/: GlobalConstants.java
common/src/main/java/org/drpc/exception/: DrpcCodecException.java  DrpcConnectionRefusedException.java  DrpcException.java  DrpcIllegalAddressException.java  DrpcRuntimeException.java  DrpcTransportException.java
common/src/main/java/org/drpc/utils/: NetUtils.java  ReflectUtils.java  RequestIdGenerator.java
common/src/main/proto/: dousi_pb.proto
cpp/: CMakeLists.txt  README.md  build_and_test.sh
cpp/cmake/Modules/: BoostExternalProject.cmake  GflagsExternalProject.cmake  HandyExternalProject.cmake  MsgpackExternalProject.cmake
cpp/src/common/: endpoint.h  logging.h
cpp/src/master/: constants.h  endpoint.h  master.h  master_client.cc  master_client.h  master_client_main.cc  master_client_session.cc  master_client_session.h  master_main.cc  master_server.cc  master_server.h  master_server_main.cc  master_test.cc
cpp/src/master/client/: master_client.cc  master_client.h
cpp/src/master/server/: master_client_session.cc  master_client_session.h  master_server.cc  master_server.h
cpp/src/tests/: demo_test.cc
docs/: CNAME  README.md
example/: pom.xml
example/src/main/java/org/dousi/pb/: ExampleClient.java  ExampleServer.java  ExampleService.java  ExampleServiceImpl.java
example/src/main/java/org/drpc/pb/: ExampleClient.java  ExampleServer.java  ExampleService.java  ExampleServiceImpl.java
example/src/main/proto/: string_pb.proto
protocol/: pom.xml
protocol/src/main/java/com/distkv/drpc/: DefaultInvoker.java  DrpcServer.java  Exporter.java  HandlerDelegate.java  Invoker.java  Proxy.java  Reference.java  ServerImpl.java
protocol/src/main/java/org/dousi/: DefaultInvoker.java  DousiServer.java  DousiSession.java  DrpcServer.java  HandlerDelegate.java  Invoker.java  Proxy.java  ServerImpl.java
protocol/src/main/java/org/dousi/dousi/: DefaultInvoker.java  DrpcServer.java  HandlerDelegate.java  Invoker.java  Proxy.java  ServerImpl.java
protocol/src/main/java/org/dousi/proxy/: ProxyFactory.java  ProxyHandler.java
protocol/src/main/java/org/dousi/session/: DousiSession.java
protocol/src/main/java/org/drpc/: DefaultInvoker.java  DrpcServer.java  HandlerDelegate.java  Invoker.java  Proxy.java  ServerImpl.java  Stub.java
protocol/src/main/java/org/drpc/proxy/: ProxyFactory.java  ProxyHandler.java
protocol/src/main/java/org/drpc/session/: DrpcSession.java
protocol/src/main/java/org/dst/drpc/: DefaultInvoker.java  Exporter.java  HandlerDelegate.java  Invoker.java  Reference.java  ServerImpl.java
server/: pom.xml
server/src/main/java/org/drpc/server/: ConcurrentLinkedSPSCQueue.java  RpcServer.java  SPSCQueue.java
test/: pom.xml
test/script/: benchmark.bash
test/script/benchmark/: benchmark.sh
test/src/main/java/org/drpc/test/: BasicTest.java
test/src/main/proto/: benchmark.proto
test/src/main/resources/: echo.proto
test/src/main/resources/proto/: benchmark.proto
test/src/test/java/org/dousi/test/: LineOrderedTest.java
test/src/test/java/org/drpc/test/: LineOrderedTest.java
test/src/test/proto/: echo.proto
test/src/test/resources/pb/: echo.proto
test/src/test/resources/proto/: echo.proto
transport/: pom.xml
transport/src/main/java/org/dousi/api/: AbstractClient.java  (+14 more)
(+403 files in other folders)
